--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(
 [rex](https://cran.r-project.org/package=rex), and
 [rematch2](https://cran.r-project.org/package=rematch2).**
 
+Adding a comment to the readme file.
+
 # regexcite
 
 <!-- badges: start -->
@@ -53,7 +55,7 @@ That's exactly what `regexcite::str_split_one()` does.
 ```{r}
 library(regexcite)
 
-str_split_one(x, pattern = ",")
+# str_split_one(x, pattern = ",")
 ```
 
 Use `str_split_one()` when the input is known to be a single string.
@@ -62,8 +64,8 @@ For safety, it will error if its input has length greater than one.
 `str_split_one()` is built on `stringr::str_split()`, so you can use its `n` argument and stringr's general interface for describing the `pattern` to be matched.
 
 ```{r}
-str_split_one(x, pattern = ",", n = 2)
+# str_split_one(x, pattern = ",", n = 2)
 
-y <- "192.168.0.1"
-str_split_one(y, pattern = stringr::fixed("."))
+# y <- "192.168.0.1"
+# str_split_one(y, pattern = stringr::fixed("."))
 ```
